--- a/article2.html
+++ b/article2.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HansSites | App Development</title>
+    <title>Blockchain's Impact on Financial Audits | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +11,6 @@
     <link rel="icon" href="logo-hanssites.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <header class="navbar scrolled">
@@ -37,8 +35,8 @@
     <main>
         <section class="detail-hero">
             <div class="container">
-                <h1 class="detail-hero-title">App Development</h1>
-                <p class="detail-hero-subtitle">Creating Functional and User-Friendly Mobile Applications.</p>
+                <p class="detail-hero-subtitle">Published on September 15, 2025</p>
+                <h1 class="detail-hero-title">Blockchain's Impact on Financial Audits</h1>
             </div>
         </section>
 
@@ -46,47 +44,41 @@
             <div class="container">
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://placehold.co/600x400/58b4ff/FFFFFF?text=Mobile+App" alt="A mobile phone displaying an app">
+                        <img src="https://images.unsplash.com/photo-1639755491103-6a97b2c0d5a3?q=80&w=1932&auto=format&fit=crop" alt="Blockchain technology visualization">
                     </div>
                     <div class="detail-text-column">
-                        <h2>Bringing Ideas to Life</h2>
+                        <h2>A New Era of Transparency and Trust</h2>
                         <p>
-                           I develop mobile applications that are both functional and delightful to use. My focus is on creating a smooth and engaging user experience (UX) supported by clean, efficient code.
+                            Blockchain technology, the distributed ledger system behind cryptocurrencies, is poised to bring unprecedented transparency and security to financial auditing. By creating an immutable and time-stamped record of all transactions, blockchain fundamentally changes how auditors verify financial information.
                         </p>
                         <p>
-                           Whether it's for iOS, Android, or cross-platform solutions, I handle the entire development process, from initial concept and design to deployment and maintenance, ensuring the final product meets the highest standards of quality.
+                            Instead of relying on sample-based testing and manual confirmations, auditors can access a shared, unalterable ledger. This allows for real-time, continuous auditing, where transactions are verified as they occur. The result is a more efficient, accurate, and trustworthy audit process that significantly reduces the risk of fraud and error.
                         </p>
                     </div>
                 </div>
 
-                <section class="competencies-section">
-                    <h2 class="subsection-title">Core Competencies</h2>
+                <div class="competencies-section" style="background-color: transparent; padding-top: 0;">
+                    <h2 class="subsection-title">Key Transformations</h2>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fab fa-react"></i>
-                            <h3>Cross-Platform</h3>
-                            <p>Building apps for multiple platforms from a single codebase.</p>
+                            <i class="fas fa-link"></i>
+                            <h3>Immutable Audit Trail</h3>
+                            <p>Every transaction is permanently recorded and linked, creating a tamper-proof audit trail from start to finish.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-drafting-compass"></i>
-                            <h3>UI/UX Design</h3>
-                            <p>Designing intuitive and attractive interfaces that users love.</p>
+                            <i class="fas fa-clock"></i>
+                            <h3>Continuous Auditing</h3>
+                            <p>Enables auditors to move from periodic checks to continuous, real-time assurance of financial data.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-network-wired"></i>
-                            <h3>API Integration</h3>
-                            <p>Connecting apps to third-party services and data sources.</p>
-                        </div>
-                         <div class="competency-card">
-                            <i class="fas fa-tachometer-alt"></i>
-                            <h3>Performance</h3>
-                            <p>Optimizing for speed, responsiveness, and efficient battery usage.</p>
+                            <i class="fas fa-cogs"></i>
+                            <h3>Automation of Verification</h3>
+                            <p>Smart contracts can automatically verify that transactions meet predefined criteria, streamlining the audit process.</p>
                         </div>
                     </div>
-                </section>
-                
-                <div class="view-more-container" style="margin-top: 80px;">
-                    <a href="index.html#keahlian" class="view-more-btn">&larr; Back to Skills</a>
+                </div>
+                 <div class="cta-section">
+                    <a href="articles.html" class="view-more-btn">← Back to All Articles</a>
                 </div>
             </div>
         </section>
