--- a/article3.html
+++ b/article3.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HansSites | App Development</title>
+    <title>Navigating ESG Reporting Standards | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +11,6 @@
     <link rel="icon" href="logo-hanssites.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <header class="navbar scrolled">
@@ -37,8 +35,8 @@
     <main>
         <section class="detail-hero">
             <div class="container">
-                <h1 class="detail-hero-title">App Development</h1>
-                <p class="detail-hero-subtitle">Creating Functional and User-Friendly Mobile Applications.</p>
+                <p class="detail-hero-subtitle">Published on August 20, 2025</p>
+                <h1 class="detail-hero-title">Navigating ESG Reporting Standards</h1>
             </div>
         </section>
 
@@ -46,47 +44,41 @@
             <div class="container">
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://placehold.co/600x400/58b4ff/FFFFFF?text=Mobile+App" alt="A mobile phone displaying an app">
+                        <img src="https://images.unsplash.com/photo-1599252513997-757ac7a73188?q=80&w=1974&auto=format&fit=crop" alt="ESG and sustainability concept">
                     </div>
                     <div class="detail-text-column">
-                        <h2>Bringing Ideas to Life</h2>
+                        <h2>A Guide for Modern Accountants</h2>
                         <p>
-                           I develop mobile applications that are both functional and delightful to use. My focus is on creating a smooth and engaging user experience (UX) supported by clean, efficient code.
+                           Environmental, Social, and Governance (ESG) reporting has moved from a niche interest to a mainstream requirement for businesses worldwide. Investors, regulators, and consumers are demanding greater transparency on corporate sustainability and ethical practices. This places the accountant at the center of a new and complex reporting landscape.
                         </p>
                         <p>
-                           Whether it's for iOS, Android, or cross-platform solutions, I handle the entire development process, from initial concept and design to deployment and maintenance, ensuring the final product meets the highest standards of quality.
+                            Accountants are now tasked with collecting, measuring, and assuring a wide range of non-financial data, from carbon emissions to diversity metrics. This requires developing new skill sets and frameworks to ensure that ESG disclosures are as reliable and accurate as traditional financial statements.
                         </p>
                     </div>
                 </div>
 
-                <section class="competencies-section">
-                    <h2 class="subsection-title">Core Competencies</h2>
+                <div class="competencies-section" style="background-color: transparent; padding-top: 0;">
+                    <h2 class="subsection-title">Key Challenges and Opportunities</h2>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fab fa-react"></i>
-                            <h3>Cross-Platform</h3>
-                            <p>Building apps for multiple platforms from a single codebase.</p>
+                            <i class="fas fa-database"></i>
+                            <h3>Data Integrity</h3>
+                            <p>Ensuring the accuracy and completeness of non-financial data from various sources across the organization.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-drafting-compass"></i>
-                            <h3>UI/UX Design</h3>
-                            <p>Designing intuitive and attractive interfaces that users love.</p>
+                            <i class="fas fa-globe"></i>
+                            <h3>Standardization</h3>
+                            <p>Navigating the complex and evolving landscape of different ESG reporting frameworks and standards.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-network-wired"></i>
-                            <h3>API Integration</h3>
-                            <p>Connecting apps to third-party services and data sources.</p>
-                        </div>
-                         <div class="competency-card">
-                            <i class="fas fa-tachometer-alt"></i>
-                            <h3>Performance</h3>
-                            <p>Optimizing for speed, responsiveness, and efficient battery usage.</p>
+                            <i class="fas fa-check-circle"></i>
+                            <h3>Assurance and Verification</h3>
+                            <p>Providing independent assurance over ESG reports to build trust and credibility with stakeholders.</p>
                         </div>
                     </div>
-                </section>
-                
-                <div class="view-more-container" style="margin-top: 80px;">
-                    <a href="index.html#keahlian" class="view-more-btn">&larr; Back to Skills</a>
+                </div>
+                 <div class="cta-section">
+                    <a href="articles.html" class="view-more-btn">← Back to All Articles</a>
                 </div>
             </div>
         </section>
