--- a/keahlian1.html
+++ b/keahlian1.html
@@ -4,87 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Details - Financial Analysis</title>
-
+    <title>HansSites | Financial Analysis & Management</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
+    <link rel="icon" href="logo-hanssites.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <header class="navbar">
+    <header class="navbar scrolled">
         <div class="container">
-            <a href="index.html" class="logo">Back to Home</a>
+            <a href="index.html" class="logo-container">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
+                <span class="logo">HansSites</span>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html#tentang">About</a></li>
+                    <li><a href="index.html#keahlian">Skills</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#articles">Articles</a></li>
+                    <li><a href="index.html#clients">Clients</a></li>
+                    <li><a href="index.html#kontak">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section class="detail-hero">
-        <div class="container">
-            <p class="detail-hero-subtitle">Skill Details</p>
-            <h1 class="detail-hero-title">Financial Analysis & Management</h1>
-        </div>
-    </section>
+    <main>
+        <section class="detail-hero">
+            <div class="container">
+                <h1 class="detail-hero-title">Financial Analysis & Management</h1>
+                <p class="detail-hero-subtitle">Precision and Strategy in Every Number.</p>
+            </div>
+        </section>
 
-    <main class="page-content">
-        <div class="container">
-            <div class="detail-main-content">
-                <div class="detail-image-column">
-                    <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial Analysis" class="page-image">
+        <section class="page-content">
+            <div class="container">
+                <div class="detail-main-content">
+                    <div class="detail-image-column">
+                        <img src="https://placehold.co/600x400/58b4ff/FFFFFF?text=Financial+Charts" alt="Financial analysis charts">
+                    </div>
+                    <div class="detail-text-column">
+                        <h2>Mastering Financial Integrity</h2>
+                        <p>
+                           With a strong foundation in accounting principles, I provide comprehensive financial analysis and management services. My expertise lies in translating complex financial data into clear, actionable insights that drive strategic business decisions.
+                        </p>
+                        <p>
+                           From detailed financial reporting and budget forecasting to risk assessment and ensuring regulatory compliance, I am dedicated to maintaining the financial health and integrity of an organization.
+                        </p>
+                    </div>
                 </div>
-                <div class="detail-text-column">
-                    <h2>In-Depth Description</h2>
-                    <p>
-                        As a professional accountant, I possess deep expertise in financial analysis and management. This includes the ability to accurately manage financial records, prepare comprehensive reports, and analyze data to support effective strategic decision-making.
-                    </p>
-                    <p>
-                        I am skilled in using various accounting software and data analysis tools to ensure regulatory compliance, identify financial trends, and provide valuable insights for business growth and operational efficiency.
-                    </p>
+
+                <section class="competencies-section">
+                    <h2 class="subsection-title">Core Competencies</h2>
+                    <div class="competency-grid">
+                        <div class="competency-card">
+                            <i class="fas fa-chart-line"></i>
+                            <h3>Financial Modeling</h3>
+                            <p>Creating dynamic models to forecast future financial performance.</p>
+                        </div>
+                        <div class="competency-card">
+                            <i class="fas fa-tasks"></i>
+                            <h3>Budget Management</h3>
+                            <p>Developing and managing budgets to optimize resource allocation.</p>
+                        </div>
+                        <div class="competency-card">
+                            <i class="fas fa-shield-alt"></i>
+                            <h3>Risk Assessment</h3>
+                            <p>Identifying and mitigating financial risks to ensure stability.</p>
+                        </div>
+                         <div class="competency-card">
+                            <i class="fas fa-file-invoice-dollar"></i>
+                            <h3>Statutory Reporting</h3>
+                            <p>Ensuring accurate and timely reporting in compliance with regulations.</p>
+                        </div>
+                    </div>
+                </section>
+                
+                <div class="view-more-container" style="margin-top: 80px;">
+                    <a href="index.html#keahlian" class="view-more-btn">&larr; Back to Skills</a>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
-
-    <section class="competencies-section">
-        <div class="container">
-            <h2 class="section-title">Key Competencies</h2>
-            <div class="competency-grid">
-                <div class="competency-card">
-                    <i class="fas fa-chart-pie"></i>
-                    <h3>Budgeting & Forecasting</h3>
-                    <p>Designing budgets and projecting future financial performance for strategic planning.</p>
-                </div>
-                <div class="competency-card">
-                    <i class="fas fa-file-invoice-dollar"></i>
-                    <h3>Financial Reporting</h3>
-                    <p>Compiling accurate and timely income statements, balance sheets, and cash flow statements.</p>
-                </div>
-                <div class="competency-card">
-                    <i class="fas fa-balance-scale"></i>
-                    <h3>Regulatory Compliance</h3>
-                    <p>Ensuring all financial activities adhere to applicable accounting standards and regulations.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="cta-section">
-        <div class="container">
-            <h2>Interested in Collaborating?</h2>
-            <p>See other projects or contact me directly to discuss how I can help you.</p>
-            <a href="index.html#kontak" class="cta-button">Contact Me</a>
-        </div>
-    </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 - HansSites. All rights reserved.</p>
+            <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
 
 </body>
-
 </html>
