--- a/keahlian4.html
+++ b/keahlian4.html
@@ -4,99 +4,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Details - Data Analysis</title>
-
-    <!-- Google Fonts & Font Awesome (Same as homepage) -->
+    <title>HansSites | Data Analysis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-    <!-- Link to the SAME CSS file -->
+    <link rel="icon" href="logo-hanssites.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- Simple Navigation -->
-    <header class="navbar">
+    <header class="navbar scrolled">
         <div class="container">
-            <a href="index.html" class="logo">Back to Home</a>
+            <a href="index.html" class="logo-container">
+                <img src="logo-hanssites.png" alt="HansSites Logo" class="header-logo">
+                <span class="logo">HansSites</span>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html#tentang">About</a></li>
+                    <li><a href="index.html#keahlian">Skills</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#articles">Articles</a></li>
+                    <li><a href="index.html#clients">Clients</a></li>
+                    <li><a href="index.html#kontak">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <!-- Hero Section for the Detail Page -->
-    <section class="detail-hero">
-        <div class="container">
-            <p class="detail-hero-subtitle">Skill Details</p>
-            <h1 class="detail-hero-title">Data Analysis</h1>
-        </div>
-    </section>
+    <main>
+        <section class="detail-hero">
+            <div class="container">
+                <h1 class="detail-hero-title">Data Analysis</h1>
+                <p class="detail-hero-subtitle">Turning Complex Data into Actionable Insights.</p>
+            </div>
+        </section>
 
-    <!-- Main Two-Column Content -->
-    <main class="page-content">
-        <div class="container">
-            <div class="detail-main-content">
-                <div class="detail-image-column">
-                    <!-- Replace this image with one relevant to data analysis -->
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop" alt="Data Analysis" class="page-image">
+        <section class="page-content">
+            <div class="container">
+                <div class="detail-main-content">
+                    <div class="detail-image-column">
+                        <img src="https://placehold.co/600x400/58b4ff/FFFFFF?text=Data+Visualization" alt="A dashboard with data visualizations">
+                    </div>
+                    <div class="detail-text-column">
+                        <h2>Unlocking Data's Potential</h2>
+                        <p>
+                           In today's world, data is a powerful asset. I specialize in analyzing large datasets to uncover hidden trends, patterns, and insights that can inform business strategy and drive growth. My analytical approach is both rigorous and creative.
+                        </p>
+                        <p>
+                           From data cleaning and processing to statistical analysis and visualization, I provide end-to-end data services that transform raw information into a clear and compelling narrative.
+                        </p>
+                    </div>
                 </div>
-                <div class="detail-text-column">
-                    <h2>In-Depth Description</h2>
-                    <p>
-                        My background in accounting provides a strong foundation for meticulous data analysis. I specialize in transforming raw data into actionable insights that drive business strategy and operational improvements. I believe that data is the key to unlocking an organization's full potential.
-                    </p>
-                    <p>
-                        I am proficient in using tools and programming languages like Python and SQL to clean, process, and model data. My goal is to present complex information in a clear and understandable way, enabling stakeholders to make informed, data-driven decisions with confidence.
-                    </p>
+
+                <section class="competencies-section">
+                    <h2 class="subsection-title">Core Competencies</h2>
+                    <div class="competency-grid">
+                        <div class="competency-card">
+                            <i class="fas fa-calculator"></i>
+                            <h3>Statistical Analysis</h3>
+                            <p>Applying statistical methods to validate hypotheses and findings.</p>
+                        </div>
+                        <div class="competency-card">
+                            <i class="fas fa-chart-pie"></i>
+                            <h3>Data Visualization</h3>
+                            <p>Creating clear and impactful charts and dashboards to communicate results.</p>
+                        </div>
+                        <div class="competency-card">
+                            <i class="fas fa-brain"></i>
+                            <h3>Business Intelligence</h3>
+                            <p>Developing BI reports that provide a comprehensive view of performance.</p>
+                        </div>
+                         <div class="competency-card">
+                            <i class="fas fa-robot"></i>
+                            <h3>Predictive Modeling</h3>
+                            <p>Using data to build models that forecast future trends and outcomes.</p>
+                        </div>
+                    </div>
+                </section>
+                
+                <div class="view-more-container" style="margin-top: 80px;">
+                    <a href="index.html#keahlian" class="view-more-btn">&larr; Back to Skills</a>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
 
-    <!-- Key Competencies Section -->
-    <section class="competencies-section">
-        <div class="container">
-            <h2 class="section-title">Key Competencies</h2>
-            <div class="competency-grid">
-                <!-- Competency 1 -->
-                <div class="competency-card">
-                    <i class="fas fa-chart-bar"></i>
-                    <h3>Data Visualization</h3>
-                    <p>Creating clear and impactful dashboards and reports to visualize complex data sets and trends.</p>
-                </div>
-                <!-- Competency 2 -->
-                <div class="competency-card">
-                    <i class="fas fa-cogs"></i>
-                    <h3>Statistical Modeling</h3>
-                    <p>Applying statistical methods and machine learning techniques to forecast trends and identify patterns.</p>
-                </div>
-                <!-- Competency 3 -->
-                <div class="competency-card">
-                    <i class="fas fa-lightbulb"></i>
-                    <h3>Business Intelligence</h3>
-                    <p>Translating data-driven findings into strategic recommendations that support business growth and objectives.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Call to Action Section -->
-    <section class="cta-section">
-        <div class="container">
-            <h2>Interested in Collaborating?</h2>
-            <p>See other projects or contact me directly to discuss how I can help you.</p>
-            <a href="index.html#kontak" class="cta-button">Contact Me</a>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 - HansSites. All rights reserved.</p>
+            <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
 
 </body>
-
 </html>
